--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100&display=swap" rel="stylesheet">
 </head>
+</head>
 <body>
 
     <!-- header -->
@@ -43,7 +44,8 @@
             <p>【経歴】<br>
               2017年：埼玉県昌平高等学校卒業。<br>
               2019年：２浪し立教大学に入学。<br>
-              2021年〜現在：Web制作フリーランスを目指し、学習開始。<br>
+              2021年1月：Web制作フリーランスを目指し、学習開始。<br>
+              2021年7月：Webマーケティング会社にて、Webエンジニアとして活動中。<br>
               <br>
               【可能な業務内容】<br>
               ・HTML&CSS(Sass)/jQuery(JavaScript)を使ったコーディング<br>
