--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               【可能な業務内容】<br>
               ・HTML&CSS(Sass)/jQuery(JavaScript)を使ったコーディング<br>
               ・レスポンシブ対応、スマートフォンファースト対応したWebサイト制作<br>
-              ・Bootstrapを使用したコーディング<br>
+              ・SEOを意識したコーディング<br>
               ・WordPressの導入、サイト構築、改修</p>
           </div>
         </div>
