--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <!-- header -->
     <header>
-      <div class="wrapper">
+      <div class="wrapper animation">
         <h1>Naoto Honda</h1>
         <nav>
           <ul>
@@ -33,7 +33,7 @@
     <!-- main -->
     <main>
       <!-- about -->
-      <section id="about" class="wrapper">
+      <section id="about" class="wrapper animation">
         <h2>About</h2>
         <div class="about">
           <div class="main-visual">
@@ -41,24 +41,31 @@
           </div>
           <div class="profile-text">
             <h3>本多直人</h3>
-            <p>【経歴】<br>
-              2017年：埼玉県昌平高等学校卒業。<br>
-              2019年：２浪し立教大学に入学。<br>
-              2021年1月：Web制作フリーランスを目指し、学習開始。<br>
-              2021年7月：Webマーケティング会社にて、Webエンジニアとして活動中。<br>
-              <br>
-              【可能な業務内容】<br>
-              ・HTML&CSS(Sass)/jQuery(JavaScript)を使ったコーディング<br>
-              ・レスポンシブ対応、スマートフォンファースト対応したWebサイト制作<br>
-              ・SEOを意識したコーディング<br>
-              ・WordPressの導入、サイト構築、改修</p>
+            <div class="career">
+              <p>【経歴】</p>
+              <ul>
+                <li>2017年：埼玉県昌平高等学校卒業。</li>
+                <li>2019年：２浪し立教大学に入学。</li>
+                <li>2021年1月：Web制作フリーランスを目指し、学習開始。</li>
+                <li>2021年7月：Webマーケティング会社にて、Webエンジニアとして活動中。</li>
+              </ul>
+            </div>
+            <div class="possible-businness">
+              <p>【可能な業務内容】</p>
+              <ul>
+                <li>HTML&CSS(Sass)/jQuery(JavaScript)を使ったコーディング</li>
+                <li>レスポンシブ対応、スマートフォンファースト対応したWebサイト制作</li>
+                <li>SEOを意識したコーディング</li>
+                <li>WordPressの導入、サイト構築、改修</li>
+              </ul>
+            </div>
           </div>
         </div>
       </section>
       <!-- about -->
 
       <!-- skill -->
-      <section id="skill" class="wrapper">
+      <section id="skill" class="wrapper animation">
         <h2>Skill</h2>
         <div class="skills">
           <div class="skill">
@@ -83,7 +90,7 @@
       <!-- skill -->
 
       <!-- works -->
-      <section id="works" class="wrapper">
+      <section id="works" class="wrapper animation">
         <h2>Works</h2>
         <ul class="works">
           <li class="work">
@@ -124,7 +131,7 @@
         </ul>
       </section>
 
-      <section id="contact" class="wrapper">
+      <section id="contact" class="wrapper animation">
         <h2>Contact</h2>
         <div class="form">              
           <!-- class, action, methodを変更しないでください -->
@@ -165,7 +172,7 @@
 
   <!-- footer -->
   <footer>
-    <div class="wrapper">
+    <div class="wrapper animation">
       <p>&copy; naoto honda</p>
     </div>
   </footer>
