--- a/index.html
+++ b/index.html
@@ -17,15 +17,22 @@
     <!-- header -->
     <header>
       <div class="wrapper animation">
-        <h1>Naoto Honda</h1>
-        <nav>
-          <ul>
-            <li><a href="#about">About</a></li>
-            <li><a href="#skill">Skill</a></li>
-            <li><a href="#works">Works</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-        </nav>
+        <div class="header-left">
+          <h1>Naoto Honda</h1>
+        </div>
+        <div class="header-right">
+          <div class="sns">
+            <a  class="twitter" href="https://twitter.com/naoto4530"><i class="fab fa-twitter-square"></i></a>
+          </div>
+          <nav>
+            <ul>
+              <li><a href="#about">About</a></li>
+              <li><a href="#skill">Skill</a></li>
+              <li><a href="#works">Works</a></li>
+              <li><a href="#contact">Contact</a></li>
+            </ul>
+          </nav>
+        </div>
       </div>
     </header>
     <!-- header -->
