--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <h2>About</h2>
         <div class="about">
           <div class="main-visual">
-            <img src="img/image0.jpeg">
+            <img src="img/naoto-honda.jpeg">
           </div>
           <div class="profile-text">
             <h3>本多直人</h3>
@@ -103,35 +103,35 @@
           <li class="work">
             <p class="photo">
               <a href="https://naoto-honda.github.io/My-portforio-work1/">
-                <img src="img/isara-coding.png">
+                <img src="img/works-isara.jpeg">
               </a>
             </p>
           </li>
           <li class="work">
             <p class="photo">
               <a href="https://naoto-honda.github.io/My-portforio-work2/">
-                <img src="img/portforio-work2.png">
+                <img src="img/makoto-blog.jpeg">
               </a>
             </p>
           </li>
           <li class="work">
             <p class="photo">
               <a href="https://naoto-honda.github.io/My-portforio-work3/">
-                <img src="img/portforio-work3.png">
+                <img src="img/deitora.jpeg">
               </a>
             </p>
           </li>
           <li class="work">
             <p class="photo">
               <a href="https://naoto-honda.github.io/My-portforio-work4/">
-                <img src="img/portforio-work4.png">
+                <img src="img/cresta.jpeg">
               </a>
             </p>
           </li>
           <li class="work">
             <p class="photo">
               <a href="https://naoto-honda.github.io/My-portforio-work5/">
-                <img src="img/portforio-work5.png">
+                <img src="img/cesta2.jpeg">
               </a>
             </p>
           </li>
